Invio e ricezione foto tramite MQTT completato.